add A* search; start HNSW dev

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: CMake
 
 on:
   push:
-    branches: [ master, ci ]
+    branches: [ master, ci, ci-* ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
