--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -79,7 +79,7 @@ set(vnet_LINK_OPTIONS fmt::fmt-header-only)
 set(grammar_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(movielens_LINK_OPTIONS gqlite)
 set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
-IF (UNIX AND NOT APPLE)
+IF (UNIX AND NOT APPLE AND NOT (CMAKE_SYSTEM_NAME MATCHES "Android"))
 set(TARGETS_OF_LEAK_TO_CHECK storage vnet movielens)
 
 foreach(LEAK_TARGET ${TARGETS_OF_LEAK_TO_CHECK})
@@ -109,7 +109,16 @@ target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS})
 IF (WIN32)
 target_link_libraries(vnet PRIVATE ${vnet_LINK_OPTIONS})
 ELSE ()
+if (CMAKE_SYSTEM_NAME MATCHES "Android")
+target_link_libraries(vnet ${vnet_LINK_OPTIONS} log)
+# target_link_libraries(storage log)
+# target_link_libraries(grammar log)
+# target_link_libraries(ptree log)
+# target_link_libraries(regress log)
+# target_link_libraries(movielens log)
+else ()
 target_link_libraries(vnet ${vnet_LINK_OPTIONS} pthread)
+endif ()
 ENDIF ()
 
 # find_package(Python3 COMPONENTS Interpreter Development)
