--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,15 +31,14 @@ jobs:
           cd ${{github.workspace}}
           git submodule foreach 'git fetch --tags --prune --force; git fetch origin; git checkout $(git describe --tags `git rev-list --tags --max-count=1`);'
       - name: Android NDK toolchain Setup
+        id: setup-ndk
         uses: nttld/setup-ndk@v1
         with: 
           ndk-version: r21e
           add-to-path: false
-      - run: ./build.sh
+      - name: Build
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-      - name: Build
-        # Build your program with the given configuration
         run: |
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
       - name: Set up JDK 1.8
