--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,17 +23,20 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 # endforeach()
 ELSEIF (APPLE)
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fpic -ftree-vectorize -Ofast")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -mfma -mavx")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize")
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
+add_definitions(-DANDROID_ARM_NEON=TRUE)
 else ()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mfma -mavx")
 endif()
 ELSEIF (UNIX)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -fopenmp  -mfma -mavx")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -fopenmp")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
+add_definitions(-DANDROID_ARM_NEON=TRUE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
 else ()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -march=native -mfma -mavx")
 endif()
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
