--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
-          cmake --build ${{github.workspace}}/build -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
+          cmake --build ${{github.workspace}}/build -- -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
