--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,9 @@ add_subdirectory(third_party/zstd/build/cmake)
 add_subdirectory(third_party/fmt)
 option(GQLITE_BUILD_TEST    "build gqlite test"   OFF)
 if (GQLITE_BUILD_TEST)
+if (CMAKE_SYSTEM_NAME MATCHES "Android")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funwind-tables -ffunction-sections")
+endif(CMAKE_SYSTEM_NAME MATCHES "Android")
 enable_testing()
 add_subdirectory(test)
 endif()
