--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -fopenmp")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
 add_definitions(-DANDROID_ARM_NEON=TRUE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon -lc++fs")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
 else ()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -march=native -mfma -mavx")
 endif()
