--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,6 +55,6 @@ jobs:
         with:
           api-level: 30
           target: aosp_atd
-          arch: arm64-v8a
+          arch: x86_64
           profile: Nexus 6
           script: chmod +x ${{github.workspace}}/test/android.sh && ${{github.workspace}}/test/android.sh
