--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,6 +11,9 @@ env:
 jobs:
   build:
     runs-on: macos-11
+    strategy:
+      platform:
+        arch: ['armeabi-v7a', 'x86', 'x86_64']
 
     steps:
       - name: checkout
@@ -44,8 +47,8 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
-          cmake -B ${{github.workspace}}/build -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
-          cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+          cmake -B ${{github.workspace}}/build/x86_64 -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=x86_64 -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
+          cmake --build ${{github.workspace}}/build/x86_64 --config ${{env.BUILD_TYPE}}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
