--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,8 +12,10 @@ jobs:
   build:
     runs-on: macos-11
     strategy:
-      platform:
-        arch: ['armeabi-v7a', 'x86', 'x86_64']
+      matrix:
+        include:
+          - arch: x86_64
+        # arch: ['armeabi-v7a', 'x86', 'x86_64']
 
     steps:
       - name: checkout
@@ -47,8 +49,8 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
-          cmake -B ${{github.workspace}}/build/x86_64 -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=x86_64 -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
-          cmake --build ${{github.workspace}}/build/x86_64 --config ${{env.BUILD_TYPE}}
+          cmake -B ${{github.workspace}}/build/${{ matrix.arch }} -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=${{ matrix.arch }} -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
+          cmake --build ${{github.workspace}}/build/${{ matrix.arch }} --config ${{env.BUILD_TYPE}}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -58,7 +60,7 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: x86_64
+          arch: ${{ matrix.arch }}
           profile: pixel_2
           sdcard-path-or-size: 100M
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
