--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,17 +24,25 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 ELSEIF (APPLE)
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fpic -ftree-vectorize -Ofast")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize")
-if (CMAKE_SYSTEM_NAME MATCHES "Android")
-add_definitions(-DANDROID_ARM_NEON=TRUE)
-else ()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mfma -mavx")
-endif()
+# if (CMAKE_SYSTEM_NAME MATCHES "Android")
+# add_definitions(-DANDROID_ARM_NEON=TRUE)
+# else ()
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mfma -mavx")
+# endif()
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -fopenmp")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
+
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
-add_definitions(-DANDROID_ARM_NEON=TRUE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
+# ANDDOID 
+	add_definitions(-DANDROID_ARM_NEON=TRUE)
+	if (ANDROID_ABI MATCHES "armeabi-v7a")
+		add_definitions(-D__ARM_ARCH_2__)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
+	elseif(ANDROID_ABI MATCHES "x86_64")
+		add_definitions(-D__x86_64__)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
+	endif()
 else ()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt -march=native -mfma -mavx")
 endif()
@@ -60,6 +68,7 @@ endif()
 # ctest_coverage(BUILD test)
 ELSE ()
 ENDIF ()
+
 
 include(GetGitRevisionDescription.cmake)
 get_git_head_revision(GIT_REFSPEC GIT_REVISION_SHA)
