--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,9 +13,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        include:
-          - arch: ['x86_64', 'armeabi-v7a']
-        # arch: [, 'x86', 'x86_64']
+        arch: ['x86_64', 'armeabi-v7a']
 
     steps:
       - name: checkout
