--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,5 +62,5 @@ jobs:
           arch: ${{ matrix.arch }}
           profile: pixel_2
           sdcard-path-or-size: 100M
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-options: --writable-system -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: chmod +x ${{github.workspace}}/test/android.sh && ${{github.workspace}}/test/android.sh
