add hnsw algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,13 +33,17 @@ ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -fopenmp")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
 
+# ANDDOID
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
-# ANDDOID 
 	add_definitions(-DANDROID_ARM_NEON=TRUE)
 	if (ANDROID_ABI MATCHES "armeabi-v7a")
 		add_definitions(-D__ARM_ARCH_2__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
+		elseif (ANDROID_ABI MATCHES "armeabi-v8a")
 	elseif(ANDROID_ABI MATCHES "x86_64")
+		add_definitions(-D__x86_64__)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
+	elseif(ANDROID_ABI MATCHES "x86")
 		add_definitions(-D__x86_64__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
 	endif()
@@ -96,13 +100,13 @@ add_definitions(-DPROJECT_VERSION="0.1.0")
 add_definitions(-DGIT_REFSPEC=${GIT_REFSPEC} "-DGIT_REVISION_SHA=\"${GIT_REVISION_SHA}\"")
 
 option(GQLITE_ENABLE_PRINT "print debug info" false)
-if (${ENABLE_PRINT})
+if (${GQLITE_ENABLE_PRINT})
 add_definitions(-DGQL_LEVEL_DEBUG)
 add_definitions(-D_PRINT_FORMAT_)
-endif (${ENABLE_PRINT})
+endif (${GQLITE_ENABLE_PRINT})
 
 option(GQLITE_ENABLE_COMPRESS "enable compress, but not support yet" false)
-if (${ENABLE_PRINT})
+if (${GQLITE_ENABLE_COMPRESS})
 add_definitions(-D_ENABLE_COMPRESS_)
 endif ()
 
