--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -47,6 +47,7 @@ set(QUERY_SOURCE ./query.cpp
 	../src/gutil.cpp
 	../src/walk/AStarWalk.cpp
 	../src/walk/RandomWalk.cpp
+	../src/base/DOT.cpp
 	../src/base/system/Platform.cpp
 	../src/base/system/EventEmitter.cpp
 )
