--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: ['x86', 'x86_64', 'armeabi-v7a']
+        arch: ['x86_64', 'arm64-v8a']
+        # arch: ['x86', 'x86_64', 'arm64-v8a']
 
     steps:
       - name: checkout
@@ -49,17 +50,18 @@ jobs:
         run: |
           cmake -B ${{github.workspace}}/build/${{ matrix.arch }} -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_NDK=${{env.ANDROID_NDK_HOME}} -DANDROID_ABI=${{ matrix.arch }} -DANDROID_PLATFORM=android-19 -DANDROID_STL=c++_shared -DGQLITE_BUILD_TEST=TRUE
           cmake --build ${{github.workspace}}/build/${{ matrix.arch }} --config ${{env.BUILD_TYPE}}
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Instrumentation Tests
-        uses: ReactiveCircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_apis
-          arch: ${{ matrix.arch }}
-          profile: Galaxy Nexus
-          sdcard-path-or-size: 500M
-          emulator-options: -writable-system -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          script: chmod +x ${{github.workspace}}/test/android.sh && ${{github.workspace}}/test/android.sh
+      # - name: Set up JDK 1.8
+      #   uses: actions/setup-java@v1
+      #   with:
+      #     java-version: 1.8
+      # - name: Instrumentation Tests
+      #   uses: ReactiveCircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 28
+      #     target: google_apis
+      #     arch: x86_64
+      #     profile: Galaxy Nexus
+      #     sdcard-path-or-size: 500M
+      #     channel: canary
+      #     emulator-options: -writable-system -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+      #     script: chmod +x ${{github.workspace}}/test/android.sh && ${{github.workspace}}/test/android.sh
