--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,8 +24,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [windows-latest, ubuntu-latest]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest, ubuntu-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - name: checkout
