fix android build error

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -164,7 +164,7 @@ target_link_libraries(vnet ${vnet_LINK_OPTIONS} log)
 target_link_libraries(decision log)
 target_link_libraries(infomation log)
 target_link_libraries(match log)
-# target_link_libraries(storage log)
+target_link_libraries(algorithm log)
 # target_link_libraries(grammar log)
 # target_link_libraries(ptree log)
 # target_link_libraries(regress log)
