remove some test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -121,14 +121,14 @@ add_executable(movielens ${MOVIELENS_SOURCE})
 add_executable(decision ${DECISION_SOURCE})
 add_executable(infomation ${INFOMATION_SOURCE})
 add_executable(match ${MATCH_SOURCE})
-add_executable(fail ${FAIL_SOURCE})
+# add_executable(fail ${FAIL_SOURCE})
 
 set(storage_LINK_OPTIONS fmt::fmt-header-only mdbx-static)
 set(vnet_LINK_OPTIONS fmt::fmt-header-only)
 set(grammar_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(movielens_LINK_OPTIONS gqlite)
 set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
-set(fail_LINK_OPTIONS gqlite)
+# set(fail_LINK_OPTIONS gqlite)
 IF (UNIX AND NOT APPLE AND NOT (CMAKE_SYSTEM_NAME MATCHES "Android"))
 set(TARGETS_OF_LEAK_TO_CHECK storage vnet movielens decision infomation decision match query)
 
@@ -144,7 +144,7 @@ ENDIF ()
 # set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/test")
 target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
 target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
-target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
+# target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
 add_dependencies(storage zstd)
 add_dependencies(query zstd)
 IF (UNIX)
